RE-66 - fixed issue with wrong padding + cleanup - Also added a proper structure for the layout.

--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/components/Layout.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/components/Layout.css
@@ -1,9 +1,15 @@
-.main-context {
+.app-context {
     display: flex;
     flex-direction: row;
 }
 
-.sub-context {
+.right-main-context {
     flex-direction: column;
     flex-grow: 1;
+}
+
+.route-context {
+    margin-right: auto;
+    margin-left: 20px;
+    margin-top: 20px;
 }
