--- a/RecommendationEngine/RecommendationEngine/FrontEnd/src/stylesheet.css
+++ b/RecommendationEngine/RecommendationEngine/FrontEnd/src/stylesheet.css
@@ -18,5 +18,5 @@ code {
 }
 
 #pageLayout {
-  margin-left: 21%;
+  /* margin-left: 20%; */
 }
